# cli-parser

./: .env.example  .gitattributes  .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: agent-architecture-and-runtime.md  architecture.md  live-corpus-test-plan.md
scripts/: __init__.py  _agent_run_support.py  run_agent_once.py  run_agent_tui.py  run_live_corpus.py
src/cli_parser_agent/: __init__.py  config.py  observability.py
src/cli_parser_agent/ttp_generation/: __init__.py  contracts.py  generator.py  progress.py  sampling.py  workflow.py
src/cli_parser_agent/ttp_generation/agent/: __init__.py  builder.py  middleware.py  prompt.py  runner.py  session.py  tools.py
src/cli_parser_agent/ttp_generation/validation/: __init__.py  capture.py  json_schema.py  ttp.py
testdata/real_command_outputs/: README.md  corpus.json
testdata/real_command_outputs/ttp_templates/cisco_ios/show_inventory/: show_inventory_modular_router.txt
testdata/real_command_outputs/ttp_templates/cisco_ios/show_running_config_pipe_section_interface/: show_running_config_pipe_section_interface.txt
tests/: conftest.py
tests/integration/: test_live_generation.py
tests/unit/: test_agent_builder.py  test_agent_protocol.py  test_agent_runner.py  test_agent_session.py  test_capture_feedback.py  test_contracts.py  test_generator.py  test_generator_protocol.py  test_generator_wire_isolation.py  test_observability.py  test_progress_events.py  test_run_agent_once.py  test_run_agent_tui.py  test_run_live_corpus.py  test_sampling.py  test_schema_validation.py  test_ttp_validation.py
