[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[project]
name = "cli-parser-agent"
version = "0.1.0"
description = "AgentScope agent that generates validated TTP templates and JSON Schemas from command outputs."
readme = "README.md"
requires-python = ">=3.11,<4.0"
license = { text = "Apache-2.0" }
dependencies = [
    "agentscope>=2.0.4,<2.1",
    "jsonschema>=4.26,<5",
    "lmnr>=0.7.56,<0.8",
    "pydantic>=2.13,<3",
    "ttp>=0.10.1,<0.11",
]

[dependency-groups]
dev = [
    "pytest>=9.0,<10",
    "pytest-asyncio>=1.3,<2",
    "ruff>=0.14,<0.15",
]

[tool.hatch.build.targets.wheel]
packages = ["src/cli_parser_agent"]

[tool.pytest.ini_options]
addopts = "-ra"
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "live: requires a real OpenAI-compatible endpoint and incurs network usage",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
